--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,9 +25,9 @@
 
             <div class="enlaces" id="enlaces">
                 <a class="home" href="/">New</a>
-                <a class="how" href="/buscador">Books</a>
+                <a class="how" href="/buscador">Gallery</a>
                 <a class="book" href="#">Tops</a>
-                <a class="contact" href="#">Ebook</a>
+                <a class="contact" href="#">Play List</a>
                 <a class="tienda" href="/carrito">
                     <div>
                         <img src="Data/ICONO.png" width="26px" alt="" class="shopping-cart">
@@ -83,21 +83,25 @@
     <!--                              /news_______________________-->
 
     <section class="new">
-        <h5>New Books</h5>
+        <h5>New Songs</h5>
 
         <div class="seccionUno">
             <div class="publicidadUno">
                 <img src="Data\2.jpg" alt=" Metamorfosis">
-                <h2>La Metamorfosis </h2>
-                <h3>Franz Kafka</h3>
+                <h2>One kiss </h2>
+                <h3>Calvin Harris, Dua Lipa</h3>
 
             </div>
             <div class="infoUno">
-                <p align="left" id="uno" class="parrafo"> It is a story by Franz Kafka published in 1915 that tells the story of Gregorio Samsa, a cloth merchant who
-                    lives with his family that he keeps with his salary, who one day dawns turned into a huge insect.</p>
+                <p align="left" id="uno" class="parrafo">  is a song by Scottish 
+                    record producer Calvin Harris and English singer Dua Lipa.
+                     It was written by Lipa, Jessie Reyez, and Harris, who also 
+                     produced the song. </p>
 
-                <p align="left" id="dos" class="parrafo"> It was included in the series Great books of the twentieth century (Great books of the twentieth century),
-                    published by Penguin Books.</p>
+                <p align="left" id="dos" class="parrafo"> "One Kiss" was released by Columbia Records
+                      on 6 April 2018, as the second single from Harris' upcoming 
+                      sixth studio album. It reached number one on the UK Singles 
+                      Chart on 20 April 2018, a week after debuting at number three.</p>
                 <a href="https://www.youtube.com/watch?v=c1ssVWtF230">See More </a>
             </div>
 
@@ -106,13 +110,16 @@
         <div class="seccionDos">
             <div class="publicidadDos">
                 <img src="Data\3.jpg" alt="">
-                <h2>Cuentos Macabros </h2>
-                <h3>Edgar Allan Poe</h3>
+                <h2>No Tears Left To Cry </h2>
+                <h3> Ariana Grande.</h3>
             </div>
             <div class="infoDos">
                 <p align="left" id="uno" class="parrafo">
-                    Misery is diverse. Misfortune multiforme rife on earth. Deployed over the wide horizon like the rainbow, its colors are as
-                    varied as those of this one and also so different and so intimately united</p>
+                     is a song by American singer Ariana Grande from her upcoming 
+                     fourth studio album, Sweetener. Written by Grande, Savan Kotecha
+                      and its producers Max Martin and Ilya, it was released by Republic
+                       Records as the album's lead single on April 20, 2018, alongside its
+                        music video.</p>
 
                 <a href="https://www.youtube.com/watch?v=c1ssVWtF230">See More </a>
             </div>
