--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -5,15 +5,17 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{tittle}}</title>
-	<meta name="description" content="A slideshow with a CSS glitch effect for transitioning between slides" />
-	<meta name="keywords" content="slideshow, glitch, effect, css, clip-path, web dev, web design" />
-	<meta name="author" content="Codrops" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
-	 <link rel="stylesheet" href="css/style1.css">
+	<!--<link rel="stylesheet" type="text/css" href="css/style1.css">-->
 	<link rel="stylesheet" type="text/css" href="css/stylem.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/glitch-slideshow.css" />
+
+
+	
+	
+
 	<script>
 		document.documentElement.className = "js";
 		var supportsCssVars = function () {
@@ -26,15 +28,10 @@
 </head>
 
 <body class="demo-2 loading">
-
 	<main>
-
 		<div class="content">
-
-
-
 			<div class="slides slides--contained effect-2">
-			
+
 				<div class="slide slide--current">
 
 					<div class="slide__img glitch" style="background-image: url(Data/img/1.jpg);" id="holi"></div>
@@ -55,9 +52,6 @@
 						</audio>
 					</div>
 				</div>
-
-
-
 
 				<div class="slide">
 					<div class="slide__img glitch" style="background-image: url(Data/img/2.jpg);" id="holi"></div>
@@ -97,6 +91,11 @@
 				</button>
 			</nav>
 		</div>
+		<!--________________________ fondo ____________________ -->
+		
+			</main>
+
+		</div>
 	</main>
 
 	<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
@@ -104,7 +103,8 @@
 	<script src="js/demo.js"></script>
 	<script src="js/demo2.js"></script>
 	<script src="js/index.js"></script>
-	  <script src='https://codepen.io/jakealbaugh/pen/WvNjZB.js'></script>
+
+
 </body>
 
 </html
