--- a/public/css/bus.scss
+++ b/public/css/bus.scss
@@ -3,12 +3,18 @@ $white: #FFF;
 
 $black: #000;
 
-$graydark: #cecece;
+$graydark: #201f21;
 
-$colorp: #0EAA65;
-$verdeOscuro:rgb(4,121,68);
-$color: #E5E5E5;
+
 $principal: 'Nunito';
+$colorp: rgb(0, 0, 0);
+$verdeOscuro:#181819;
+$color: #E5E5E5;
+$balnco: #ffffff;
+$white: #FFF;
+$black: #000;
+
+$rojo:FFFFF;
 
 * {
     font-family: "Nunito", sans-serif;
