--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -33,9 +33,9 @@
 
             <div class="enlaces" id="enlaces">
                 <a class="home" href="/">New</a>
-                <a class="how" href="/buscador">Books</a>
+                <a class="how" href="/buscador">Gallery</a>
                 <a class="book" href="#">Tops</a>
-                <a class="contact" href="#">Ebook</a>
+                <a class="contact" href="#">Play List</a>
                 <a class="tienda" href="/carrito">
                     <div>
                         <img src="Data/ICONO.png" width="26px" alt="" class="shopping-cart">
