--- a/views/koow.hbs
+++ b/views/koow.hbs
@@ -30,11 +30,11 @@
             </div>
 
             <div class="enlaces" id="enlaces">
-                <a class="home" href="/">New</a>
-                <a class="how" href="/buscador">Books</a>
+              <a class="home" href="/">New</a>
+                <a class="how" href="/buscador">Gallery</a>
                 <a class="book" href="#">Tops</a>
-                <a class="contact" href="#">Ebook</a>
-                <a class="tienda " href="/carrito">
+                <a class="contact" href="#">Play List</a>
+                <a class="tienda" href="/carrito">
                     <div>
                         <img src="/Data/ICONO.png" width="26px" alt="" class="shopping-cart">
                         <span class="carrito">0</span>
@@ -69,13 +69,13 @@
                                     Start: {{lib.calificacion}}
                                 </p>
                                 <p class="datos">
-                                    Classification: {{lib.clasificacion}}
+                                    Biblioteca: {{lib.biblioteca}}
                                 </p>
                                 <p class="datos">
                                     Gender: {{lib.genero}}
                                 </p>
                                 <p class="datos">
-                                    Number of Illustrations: {{lib.ilustraciones}}
+                                    Extencion: {{lib.Extension}}
                                 </p>
 
                             </div>
