--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -36,14 +36,15 @@
 
 					<div class="slide__img glitch" style="background-image: url(Data/img/1.jpg);" id="holi"></div>
 					<div class="slide__text">
-						<h2 class="slide__title">Broken Glow</h2>
+						
 						<a href="#" title="Listen to the song" class="player-controls">
 							<span class="play"></span>
 							<span class="pause"></span>
 							<span class="audio-label">
 								<span>
-									Drake
-									<small>One Dance</small>
+									<h2 class="slide__title">Lsd</h2>
+									Genius
+									<small>Sia, Diplo, Labrinth</small>
 								</span>
 							</span>
 						</a>
