--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ header {
   justify-content: center;
   align-content: stretch;
   align-items: center;
-  background: #0EAA65;
+  background: black;
   width: 100%;
   text-align: center;
   z-index: 99;
@@ -49,7 +49,7 @@ header .menu .logo img {
 }
 
 .enlaces a:hover {
-  background: #047944;
+  background: #181819;
   font-weight: 800;
   font-size: 1.1rem;
 }
@@ -171,11 +171,11 @@ header .menu .logo img {
 .sgt {
   width: 100%;
   height: 1000px;
-  background: #0EAA65;
+  background: black;
 }
 
 .far fa-dot-circle {
-  color: #047944;
+  color: #181819;
 }
 
 /* Mediaqueries Menu */
@@ -240,13 +240,13 @@ header .menu .logo img {
   font-size: 4rem;
   font-style: normal;
   font-weight: 800;
-  color: #0EAA65;
+  color: black;
 }
 
 .new .seccionUno {
   width: 80%;
   height: auto;
-  background: #0EAA65;
+  background: black;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -331,7 +331,7 @@ header .menu .logo img {
   /*espacio alrededor texto*/
   background-color: #ffffff;
   /*color botón*/
-  color: #0EAA65;
+  color: black;
   /*color texto*/
   text-decoration: none;
   /*decoración texto*/
@@ -351,7 +351,7 @@ header .menu .logo img {
 .new .seccionDos {
   width: 80%;
   height: auto;
-  background: #0EAA65;
+  background: black;
   display: flex;
   justify-content: space-between;
   align-content: center;
@@ -432,7 +432,7 @@ header .menu .logo img {
   /*espacio alrededor texto*/
   background-color: #ffffff;
   /*color botón*/
-  color: #0EAA65;
+  color: black;
   /*color texto*/
   text-decoration: none;
   /*decoración texto*/
@@ -460,7 +460,7 @@ header .menu .logo img {
   font-size: 4rem;
   font-style: normal;
   font-weight: 800;
-  color: #0EAA65;
+  color: black;
   font-family: "Nunito", sans-serif;
   text-align: center;
 }
@@ -877,7 +877,7 @@ header .menu .logo img {
 }
 
 .registro .titulo h5 {
-  color: #0EAA65;
+  color: black;
 }
 
 .registro .correo {
@@ -912,7 +912,7 @@ header .menu .logo img {
   /*anchura, estilo y color borde*/
   padding: 10px 30px;
   /*espacio alrededor texto*/
-  background-color: #0EAA65;
+  background-color: black;
   /*color botón*/
   color: #ffffff;
   /*color texto*/
@@ -965,12 +965,12 @@ header .menu .logo img {
     font-size: 4rem;
     font-style: normal;
     font-weight: 800;
-    color: #0EAA65;
+    color: black;
   }
   .new .seccionUno {
     width: 80%;
     height: auto;
-    background: #0EAA65;
+    background: black;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -1048,7 +1048,7 @@ header .menu .logo img {
     /*espacio alrededor texto*/
     background-color: #ffffff;
     /*color botón*/
-    color: #0EAA65;
+    color: black;
     /*color texto*/
     text-decoration: none;
     /*decoración texto*/
@@ -1066,7 +1066,7 @@ header .menu .logo img {
   .new .seccionDos {
     width: 80%;
     height: auto;
-    background: #0EAA65;
+    background: black;
     display: flex;
     justify-content: space-between;
     align-content: center;
@@ -1141,7 +1141,7 @@ header .menu .logo img {
     /*espacio alrededor texto*/
     background-color: #ffffff;
     /*color botón*/
-    color: #0EAA65;
+    color: black;
     /*color texto*/
     text-decoration: none;
     /*decoración texto*/
@@ -1186,7 +1186,7 @@ header .menu .logo img {
 footer {
   height: 1vh;
   width: 100%;
-  background: #0EAA65;
+  background: black;
 }
 
 footer .ifo {
@@ -1207,7 +1207,7 @@ footer .ifo {
 }
 
 footer .cont-social {
-  background: #047944;
+  background: #181819;
   padding: 5%;
   width: 100%;
   display: flex;
