--- a/views/buscador.hbs
+++ b/views/buscador.hbs
@@ -14,7 +14,7 @@
 
 
     <link rel="stylesheet" href="css/bus.css">
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontawesome-all.css">
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:600" rel="stylesheet">
