alcualizacion todo fuciona

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,7 +47,7 @@
         </div>
         <img src="Data\1.jpg" alt="">
         <img src="Data\2.jpg" alt="">
-        <img src="https://images.unsplash.com/photo-1471138406156-7a89e687a062?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=7820fc816715b37942a793360b785c60"
+        <img src="Data\4.jpg"
             alt="">
         <div class="arrow arrow-right">
             <i class="fas fa-chevron-circle-right"></i>
@@ -102,7 +102,7 @@
                       on 6 April 2018, as the second single from Harris' upcoming 
                       sixth studio album. It reached number one on the UK Singles 
                       Chart on 20 April 2018, a week after debuting at number three.</p>
-                <a href="https://www.youtube.com/watch?v=c1ssVWtF230">See More </a>
+                <a href="">See More </a>
             </div>
 
 
@@ -121,7 +121,7 @@
                        Records as the album's lead single on April 20, 2018, alongside its
                         music video.</p>
 
-                <a href="https://www.youtube.com/watch?v=c1ssVWtF230">See More </a>
+                <a href="">See More </a>
             </div>
 
         </div>
@@ -142,53 +142,53 @@
         <div class="gal">
             <div class="primero">
                 <div class="pri">
-                    <img src="Data\g-01.png" alt="" width="250px" height="250px">
-                    <h4>Song of Ice and Fire </h4>
-                    <h6>George R.R. Martin</h6>
+                    <img src="Data/venta/g-10.jpg" alt="" width="250px" height="250px">
+                    <h4>Lsd</h4>
+                    <h6>Sia, Diplo, Labrinth</h6>
                 </div>
                 <div class="s">
-                    <img src="Data\g-02.png" alt="" width="250px" height="250px">
-                    <h4>The Sleeping Young Woman and the spindle </h4>
-                    <h6>Neil Gaiman</h6>
+                    <img src="Data/venta/g-03.jpg" alt="" width="250px" height="250px">
+                    <h4>Hopeless Fountain Kingdom </h4>
+                    <h6>Halsey</h6>
                 </div>
                 <div class="t">
-                    <img src="Data\g-03.png" alt="" width="250px" height="250px">
+                    <img src="Data/venta/g-07.jpg" alt="" width="250px" height="250px">
                     <h4> A Monster Comes To See Me </h4>
-                    <h6>Patricy Ness y Jim Kay</h6>
+                    <h6>Halsey</h6>
                 </div>
             </div>
             <div class="segundo">
                 <div class="pri">
-                    <img src="Data\g-04.png" alt="" width="250px" height="250px">
-                    <h4> A Bible </h4>
-                    <h6>Philippe Lechermeier</h6>
+                    <img src="Data/venta/g-03.jpg" alt="" width="250px" height="250px">
+                    <h4> Alone </h4>
+                    <h6>Halsey</h6>
                 </div>
                 <div class="s">
-                    <img src="Data\g-05.png" alt="" width="250px" height="250px">
-                    <h4>The End </h4>
-                    <h6></h6>
+                    <img src="Data/venta/g-02.jpg" alt="" width="250px" height="250px">
+                    <h4>Encanto Tropica </h4>
+                    <h6>Monsieur Periné</h6>
                 </div>
                 <div class="t">
-                    <img src="Data\g-06.png" alt="" width="250px" height="250px">
-                    <h4>The Summer Rules </h4>
-                    <h6>Shaun Tan</h6>
+                    <img src="Data/venta/g-06.jpg" alt="" width="250px" height="250px">
+                    <h4>Again-short ver </h4>
+                    <h6>Yui</h6>
                 </div>
             </div>
             <div class="tersero">
                 <div class="pri">
-                    <img src="Data\g-7.png" alt="" width="250px" height="250px">
-                    <h4>The Little Prince </h4>
-                    <h6>Antoine de Saint-Exupéry</h6>
+                    <img src="Data/venta/g-08.jpg" alt="" width="250px" height="250px">
+                    <h4>Sonne</h4>
+                    <h6>Rammstein</h6>
                 </div>
                 <div class="s">
-                    <img src="Data\g-8.png" alt="" width="250px" height="250px">
-                    <h4>Seda </h4>
-                    <h6>Alessandro Baricco </h6>
+                    <img src="Data/venta/g-09.jpg" alt="" width="250px" height="250px">
+                    <h4>FRIENDS </h4>
+                    <h6>Marshmello ft. Anne-Marie</h6>
                 </div>
                 <div class="t">
-                    <img src="Data\g-9.png" alt="" width="250px" height="250px">
-                    <h4>The Ingenious Nobleman Sir Quixote of La Mancha </h4>
-                    <h6> Miguel de Cervantes Saavedra.</h6>
+                    <img src="Data/venta/g-05.jpg" alt="" width="250px" height="250px">
+                    <h4>Bye Bye</h4>
+                    <h6>CRO</h6>
                 </div>
             </div>
 
