--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<!--<link rel="stylesheet" type="text/css" href="css/style1.css">-->
 	<link rel="stylesheet" type="text/css" href="css/stylem.css" />
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
 	<link rel="stylesheet" type="text/css" href="css/glitch-slideshow.css" />
 
 
@@ -36,16 +36,17 @@
 
 					<div class="slide__img glitch" style="background-image: url(Data/img/1.jpg);" id="holi"></div>
 					<div class="slide__text">
-						
+						<h2 class="slide__title">Lsd- Genius</h2>
+						<span>
+									
+									
+									<small contenteditable="slide__description">Sia, Diplo, Labrinth</small>
+								</span>
 						<a href="#" title="Listen to the song" class="player-controls">
 							<span class="play"></span>
 							<span class="pause"></span>
 							<span class="audio-label">
-								<span>
-									<h2 class="slide__title">Lsd</h2>
-									Genius
-									<small>Sia, Diplo, Labrinth</small>
-								</span>
+								
 							</span>
 						</a>
 						<audio id="player">
@@ -57,9 +58,24 @@
 				<div class="slide">
 					<div class="slide__img glitch" style="background-image: url(Data/img/2.jpg);" id="holi"></div>
 					<div class="slide__text">
-						<h2 class="slide__title">Morning Dew</h2>
-						<p class="slide__description">You have learn to bury your guilt with anger. I will teach you to confront it and to face the truth.</p>
+						<h2 class="slide__title">Lsd- Genius</h2>
+						<span>
+									
+									
+									<small contenteditable="slide__description">Sia, Diplo, Labrinth</small>
+								</span>
+						<a href="#" title="Listen to the song" class="player-controls">
+							<span class="play"></span>
+							<span class="pause"></span>
+							<span class="audio-label">
+								
+							</span>
+						</a>
+						<audio id="player">
+							<source src="Data/music/LSD - Genius ft. Sia, Diplo, Labrinth.mp3" type="audio/mp3">
+						</audio>
 					</div>
+				</div>
 				</div>
 				<div class="slide">
 					<div class="slide__img glitch" style="background-image: url(Data/img/3.jpg);" id="holi"></div>
