--- a/public/css/stylem.css
+++ b/public/css/stylem.css
@@ -1,15 +1,9 @@
 
 .player-controls {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: stretch;
-  align-items: center;
 
   color: #FFF;
   cursor: pointer;
-  
+  display: block;
   font-size: 40px;
   height: 1em;
   position: relative;
@@ -24,12 +18,14 @@
 
   text-align: right;
   text-transform: uppercase;
-  top: 2em;
+ 
  
 }
+
 .player-controls .audio-label span {
-  font-size: 18px;
+  font-size: 20 px;
 }
+
 .player-controls .audio-label span small {
   display: block;
   font-size: 0.83em;
