--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -35,7 +35,7 @@
                 <a class="home" href="/">New</a>
                 <a class="how" href="/buscador">Gallery</a>
                 <a class="book" href="#">Tops</a>
-                <a class="contact" href="#">Play List</a>
+                 <a class="contact" href="/selecplay">Play List</a>
                 <a class="tienda" href="/carrito">
                     <div>
                         <img src="Data/ICONO.png" width="26px" alt="" class="shopping-cart">
