--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -4,17 +4,17 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{{tittle}}</title>
+	<title>PlayList</title>
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<!--<link rel="stylesheet" type="text/css" href="css/style1.css">-->
 	<link rel="stylesheet" type="text/css" href="css/stylem.css" />
-
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/glitch-slideshow.css" />
 
 
-	
-	
+
+
 
 	<script>
 		document.documentElement.className = "js";
@@ -28,6 +28,11 @@
 </head>
 
 <body class="demo-2 loading">
+
+	
+
+
+	
 	<main>
 		<div class="content">
 			<div class="slides slides--contained effect-2">
@@ -36,17 +41,16 @@
 
 					<div class="slide__img glitch" style="background-image: url(Data/img/1.jpg);" id="holi"></div>
 					<div class="slide__text">
-						<h2 class="slide__title">Lsd- Genius</h2>
 						<span>
-									
-									
-									<small contenteditable="slide__description">Sia, Diplo, Labrinth</small>
-								</span>
+							<h2 class="slide__title">Lsd-Genius</h2>
+
+							<p class="slide__description">Sia, Diplo, Labrinth</a>
+						</span>
 						<a href="#" title="Listen to the song" class="player-controls">
 							<span class="play"></span>
 							<span class="pause"></span>
 							<span class="audio-label">
-								
+
 							</span>
 						</a>
 						<audio id="player">
@@ -58,17 +62,75 @@
 				<div class="slide">
 					<div class="slide__img glitch" style="background-image: url(Data/img/2.jpg);" id="holi"></div>
 					<div class="slide__text">
-						<h2 class="slide__title">Lsd- Genius</h2>
 						<span>
-									
-									
-									<small contenteditable="slide__description">Sia, Diplo, Labrinth</small>
-								</span>
+							<h2 class="slide__title">Lsd-Audio</h2>
+
+							<p class="slide__description">Sia, Diplo, Labrinth</a>
+						</span>
 						<a href="#" title="Listen to the song" class="player-controls">
 							<span class="play"></span>
 							<span class="pause"></span>
 							<span class="audio-label">
-								
+
+							</span>
+						</a>
+						<audio id="player">
+							<source src="Data\music\LSD - Audio ft. Sia Diplo Labrinth.mp3" type="audio/mp3">
+						</audio>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="slide__text">
+						<span>
+							<h2 class="slide__title">Alone</h2>
+
+							<p class="slide__description">Halsey</a>
+						</span>
+						<a href="#" title="Listen to the song" class="player-controls">
+							<span class="play"></span>
+							<span class="pause"></span>
+							<span class="audio-label">
+
+							</span>
+						</a>
+						<audio id="player">
+							<source src="Data\music\Halsey - Alone ft. Big Sean Stefflon Don.mp3" type="audio/mp3">
+						</audio>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="slide__img glitch" style="background-image: url(Data/img/4.jpg);" id="holi"></div>
+					<div class="slide__text">
+						<span>
+							<h2 class="slide__title">One Kiss</h2>
+
+							<p class="slide__description">Calvin Harris, Dua Lipa</a>
+						</span>
+						<a href="#" title="Listen to the song" class="player-controls">
+							<span class="play"></span>
+							<span class="pause"></span>
+							<span class="audio-label">
+
+							</span>
+						</a>
+						<audio id="player">
+							<source src="Data\music\Calvin Harris Dua Lipa - One Kiss (Official Video).mp3" type="audio/mp3">
+						</audio>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="slide__img glitch" style="background-image: url(Data/img/5.jpg);" id="holi"></div>
+					<div class="slide__text">
+						<span>
+							<h2 class="slide__title">Lsd-Genius</h2>
+
+							<p class="slide__description">Sia, Diplo, Labrinth</a>
+						</span>
+						<a href="#" title="Listen to the song" class="player-controls">
+							<span class="play"></span>
+							<span class="pause"></span>
+							<span class="audio-label">
+
 							</span>
 						</a>
 						<audio id="player">
@@ -76,29 +138,8 @@
 						</audio>
 					</div>
 				</div>
-				</div>
-				<div class="slide">
-					<div class="slide__img glitch" style="background-image: url(Data/img/3.jpg);" id="holi"></div>
-					<div class="slide__text">
-						<h2 class="slide__title">Crystal Way</h2>
-						<p class="slide__description">I just the took to calling it the Bat. And yes Mr. Wayne, it does come in black.</p>
-					</div>
-				</div>
-				<div class="slide">
-					<div class="slide__img glitch" style="background-image: url(Data/img/4.jpg);" id="holi"></div>
-					<div class="slide__text">
-						<h2 class="slide__title">Fine Quest</h2>
-						<p class="slide__description">You have nothing, nothing to threaten me with. Nothing to do with all your strength.</p>
-					</div>
-				</div>
-				<div class="slide">
-					<div class="slide__img glitch" style="background-image: url(Data/img/5.jpg);" id="holi"></div>
-					<div class="slide__text">
-						<h2 class="slide__title">Dome Being</h2>
-						<p class="slide__description">I'll be standing where l belong. Between you and the people of Gotham.</p>
-					</div>
-				</div>
 			</div>
+
 			<nav class="slide-nav">
 				<button class="slide-nav__button">
 					<span>Previous</span>
@@ -108,11 +149,11 @@
 				</button>
 			</nav>
 		</div>
-		<!--________________________ fondo ____________________ -->
 		
-			</main>
 
-		</div>
+
+
+		
 	</main>
 
 	<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
