--- a/public/css/stylem.css
+++ b/public/css/stylem.css
@@ -1,3 +1,224 @@
+header {
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: stretch;
+  align-items: center;
+  background: black;
+  width: 100%;
+  text-align: center;
+  z-index: 99;
+}
+
+header .menu {
+  width: 100%;
+  max-width: 1750px;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em 3em;
+}
+
+header .menu .logo {
+  display: inline-block;
+}
+
+header .menu .logo img {
+  vertical-align: top;
+  padding: 5px 0px;
+  height: 50px;
+}
+
+.btn-menu {
+  display: none;
+  color: #ffffff;
+  font-size: 1.5em;
+  text-decoration: none;
+}
+
+.enlaces {
+  display: inline-block;
+  text-align: right;
+}
+
+.enlaces a:hover {
+  background: #181819;
+  font-weight: 800;
+  font-size: 1.1rem;
+}
+
+.enlaces a {
+  color: #ffffff;
+  display: inline-block;
+  text-decoration: none;
+  font-family: "Nunito", sans-serif;
+  font-size: 1em;
+  font-weight: 600;
+  padding: 1.1em 2em;
+  text-align: center;
+}
+
+.headroom {
+  transition: transform .3s ease;
+}
+
+.headroom--pinned {
+  transform: translateY(0%);
+}
+
+.headroom--unpinned {
+  transform: translateY(-100%);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  margin-top: -2rem;
+  width: 100%;
+  height: 50rem;
+  position: relative;
+  top: 80px;
+  background: #355C7D;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, rgba(255, 217, 0, 0.712), #49a086, #70a049);
+  background: linear-gradient(to right, rgba(255, 217, 0, 0.712), #49a086, #70a049);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  overflow: hidden;
+}
+
+.container img {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  animation: fade 1s;
+}
+
+.container .arrow {
+  z-index: 10;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: auto;
+  right: auto;
+  width: 1.5rem;
+  height: 1.5rem;
+  font-size: 1.5rem;
+  color: #E5E5E5;
+  opacity: 0.5;
+  transition: opacity 1s;
+}
+
+.container .arrow:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.container .arrow-left {
+  left: 2%;
+}
+
+.container .arrow-right {
+  right: 2%;
+}
+
+.container .dots {
+  position: absolute;
+  margin: auto;
+  top: auto;
+  bottom: 2%;
+  left: 0;
+  right: 0;
+  width: 6.5rem;
+  height: auto;
+  z-index: 5;
+}
+
+.container .dots .dot {
+  width: 2rem;
+  height: 2rem;
+  display: inline-flex;
+  align-content: center;
+  justify-content: center;
+  color: #E5E5E5;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.sgt {
+  width: 100%;
+  height: 1000px;
+  background: black;
+}
+
+.far fa-dot-circle {
+  color: #181819;
+}
+
+/* Mediaqueries Menu */
+@media screen and (max-width: 700px) {
+  header .menu .logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0.5em;
+  }
+  header .menu .logo img {
+    display: inline-block;
+  }
+  .btn-menu {
+    display: block;
+    padding: 0.2em;
+  }
+  .menu {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    align-content: space-around;
+    flex-direction: column;
+  }
+  header .menu .enlaces {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  header .menu .enlaces a {
+    display: inline-block;
+    flex-direction: column;
+    width: 100%;
+  }
+  .regis {
+    height: 2000px;
+  }
+  .text,
+  .correo {
+    width: 100%;
+  }
+}
 
 .player-controls {
 
