--- a/views/playlistDos.hbs
+++ b/views/playlistDos.hbs
@@ -63,12 +63,12 @@
 
 				<div class="slide slide--current">
 
-					<div class="slide__img glitch" style="background-image: url(Data/img/1.jpg);" id="holi"></div>
+					<div class="slide__img glitch" style="background-image: url(Data/img/3.jpg);" id="holi"></div>
 					<div class="slide__text">
 						<span>
-							<h2 class="slide__title">Lsd-Genius</h2>
+							<h2 class="slide__title">Alone</h2>
 
-							<p class="slide__description">Sia, Diplo, Labrinth</a>
+							<p class="slide__description">Halsey</a>
 						</span>
 						<a href="#" title="Listen to the song" class="player-controls">
 							<span class="play"></span>
@@ -78,15 +78,14 @@
 							</span>
 						</a>
 						<audio id="player">
-							<source src="Data/music/LSD - Genius ft. Sia, Diplo, Labrinth.mp3" type="audio/mp3">
+							<source src="Data\music\Halsey - Alone ft. Big Sean Stefflon Don.mp3" type="audio/mp3">
 						</audio>
 					</div>
 				</div>
 				<div class="slide">
-					<div class="slide__img glitch" style="background-image: url(Data/img/1.jpg);"></div>
+					<div class="slide__img glitch" style="background-image: url(img/3.jpg);"></div>
 					<div class="slide__text">
-						<h2 class="slide__title">Crystal Way</h2>
-						<p class="slide__description">I just the took to calling it the Bat. And yes Mr. Wayne, it does come in black.</p>
+						
 					</div>
 				</div>
 				<div class="slide">
@@ -109,12 +108,12 @@
 			</div>
 
 			<nav class="slide-nav">
-				<a href="/playlistTres">
+				<a href="/playlistUno">
 					<button class="slide-nav__button">
 					<span>Previous</span>
 				</button>
 				</a>
-				<a href="/playlistUno"></a>
+				<a href="/playlistTres"></a>
 				<button class="slide-nav__button next">
 					<span>Next</span>
 				</button>
